# Cir-C

./: .gitignore  README.md
Cir-C/: CMakeLists.txt  Cir-C.cpp  Cir-C.h  FileManager.h  Lexer.h  LogicGate.h  Makefile  MessageManager.h  Parser.h  Simulator.h  Token.h  Toolbox.h  UnitTestingRoom.h
testfiles/: and.dot  inputFileDot.dot  inputFileJson.json  logic2.json  testFileJson.json
testfiles/Examen/circuits/: LFSR.dot  full_adder.dot  half_adder.dot
testfiles/Examen/grammar_check/: case_insentive.dot  direct_connection_inversed.dot  double_declaration_1.dot  input_loop.dot  label_empty.dot  label_incomplete.dot  label_missing.dot  label_missing_bracket_2.dot  long_name_1.dot  long_name_2.dot  missing_bracket_1.dot  missing_bracket_2.dot  missing_connection.dot  missing_declaration.dot  missing_semicolomn_1.dot  missing_semicolomn_multiple.dot  output_loop.dot  reserved_words.dot
testfiles/Examen/portes_elementaires/: FlipFlop.dot  Mux_explicit.dot  Mux_implicit.dot  and2.dot  direct_connection.dot  nand2.dot  nor2.dot  not.dot  or2.dot  xnor2.dot  xor2.dot
testfiles/Examen/stimuli/: full_adder.json  half_adder.json  lfsr.json  one_input.json  three_inputs.json  two_inputs.json
testfiles/Examen/structure_check/: comb_loop_long.dot  comb_loop_simple.dot  dangling_gate.dot  double_declaration_2.dot  floating_loop.dot  input_output_inversed.dot  label_missing_bracket_1.dot  label_wrong.dot  missing_connection_1.dot  missing_input.dot  missing_output.dot  not_enough_ports.dot  too_many_ports.dot
testfiles/Examen/structure_ok/: and_not.dot  concatenation.dot  (+6 more)
