# CMakeList.txt : projet CMake pour Cir-C, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("Cir-C")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (Cir-C "Cir-C.cpp" "Cir-C.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
